platform/auth/zitadel/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zitadel
  namespace: zitadel
spec:
  parentRefs:
    - name: main
      namespace: traefik
      sectionName: http
  hostnames:
    - zitadel.beeslab.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: zitadel
          port: 8080
